# credit-risk-scorecard

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
models/: credit_risk_model.json
notebooks/: 01_eda.ipynb
src/: __init__.py
src/data/: loader.py  preprocessor.py
src/explainability/: __init__.py  fairness.py  shap_explainer.py
src/features/: engineer.py
src/models/: __init__.py  scorecard.py  trainer.py
streamlit_app/: app.py
tests/: test_models.py
